2006-06-02  Guillem Jover  <guillem@debian.org>

	* scripts/install-info.pl: Do not use English non-essential module.

2006-06-02  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-shlibdeps.pl (@librarypaths): Add '/lib32' and
	'/usr/lib32/'.

2006-06-02  Guillem Jover  <guillem@debian.org>

	* src/query.c (setaction): Print also the short command line action.
	* src/main.c (setaction): Likewise.
	* dpkg-deb/main.c (setaction): Likewise.
	* dpkg-split/main.c (setaction): Likewise.

2006-05-31  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.13.21~.

2006-05-31  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.13.20.

2006-05-31  Koblinger Egmont  <egmont@uhulinux.hu>

	* src/processarc.c (process_archive): Do not pass to parsedb
	pdb_weakclassification, so that the Section and Priority fields
	gets updated with new packages.

2006-05-31  Julian Gilbey  <jdg@debian.org>

	* scripts/changelog/debian.pl: Remove duped string ' , at changelog '.

2006-05-31  Guillem Jover  <guillem@debian.org>

	* src/enquiry.c (cmpversions): Prefix the bad syntax error with a
	'dpkg: ' and print the bogus version string.

2006-05-25  Guillem Jover  <guillem@debian.org>

	* scripts/install-info.pl: Exit if the lock file already exists.
	This change was lost when doing the i18n of the scripts.

2006-05-25  Ben Pfaff  <blp@cs.stanford.edu>

	* scripts/install-info.pl: Use %! instead if $! to check for EEXIST.

2006-05-23  Guillem Jover  <guillem@debian.org>

	* scripts/controllib.pl (parsechangelog): Do not strip the epoch from
	the source:Upstream-Version substvar.

2006-05-23  Guillem Jover  <guillem@debian.org>

	* scripts/controllib.pl (usageerr): Use usage instead of
	usageversion.
	* scripts/dpkg-statoverride.pl (UsageVersion): Rename to ...
	(usageversion): ... this.
	* scripts/dpkg-parsechangelog.pl (usageversion): Split into usage
	and version functions. Print to stdout. Standarize output format.
	Add '--help' and '--version'.