@@ -8,6 +8,8 @@ dpkg (1.13.21~) UNRELEASED; urgency=low
     list. Closes: #367892
   * Revert usage of English perl non-essential module from install-info.
     Closes: #369928, #369958, #370157, #370174, #370210
+  * Print the correct file being parsed by dpkg-parsechangelog's debian
+    parser. Closes: #368961
 
   [ Updated dpkg Translations ]
   * Czech (Miroslav Kure).
