@@ -1,3 +1,7 @@
+2006-06-04  Guillem Jover  <guillem@debian.org>
+
+	* dpkg-dev.pot: Regenerated.
+
 2006-05-31  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
