@@ -1,3 +1,12 @@
+2006-06-04  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-parsechangelog.pl: Pass forward the '-l' option to
+	the format parser.
+	* scripts/changelog/debian.pl: Add '-l' option and set $changelogfile.
+	(usage): Document the new '-l' option.
+	(clerror): Print $changelogfile instead of 'changelog'.
+	(clwarn): Likewise.
+
 2006-06-02  Guillem Jover  <guillem@debian.org>
 
 	* scripts/install-info.pl: Do not use English non-essential module.
